gke/gke-expose-services/ingress-neg/hello-fanout-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fanout-ingress
spec:
  rules:
  - http:
      paths:
      - path: /v1
        backend:
          serviceName: hello
          servicePort: 8080
      - path: /v2
        backend:
          serviceName: hello2
          servicePort: 8080
